Fixed overflow of tags, minor dialog change

--- a/libsrc/app.css
+++ b/libsrc/app.css
@@ -246,7 +246,7 @@ a.tag_label:hover { color : #F73627; background : #FFF673; }
 .feed .title3 { font-size : .9em; }
 .feed .thumb { float : left; margin-right : 10px; }
 .feed .other, .feed .tags { font-size : .8em }
-.feed .tags { height : 2.5em; overflow : hidden; text-overflow : ellipsis; }
+.feed .tags { height : 2.4em; overflow : hidden; text-overflow : ellipsis; }
 .feed .other { position : absolute; left : 139px; bottom : 5px; font-weight : bold; }
 
 .fathead { font-family : Museo, Helvetica, sans-serif; font-size : 3em; font-weight : bold; margin : 60px 50px 60px 50px; }
